--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Trying this GitHub thing</h1>
 
-Residing at <a href="http://bytebot.net/blog">ByteBot.Net</a>
+Residing at <a href="http://bytebot.net/">ByteBot.Net</a>. Why not read the <a href="http://bytebot.net/blog/">blog</a>?
